.golden/6039356029193947908/golden

INITIALPATH:7:11: error:
    • No instance for (RealFloat [Char]) arising from a use of ‘PyF.Internal.QQ.formatAnyFractional’
    • In the first argument of ‘Data.Text.Internal.Builder.fromString’, namely ‘((((((PyF.Internal.QQ.formatAnyFractional (PyF.Formatters.Upper PyF.Formatters.Exponent)) PyF.Formatters.Minus) (PyF.Internal.QQ.newPadding PyF.Internal.PythonSyntax.PaddingDefault)) ((PyF.Internal.QQ.toGrp Nothing) 3)) (PyF.Internal.QQ.changePrec PyF.Internal.PythonSyntax.PrecisionDefault)) hello)’
      In the first argument of ‘PyF.magicFormat’, namely ‘(Data.Text.Internal.Builder.fromString ((((((PyF.Internal.QQ.formatAnyFractional (PyF.Formatters.Upper PyF.Formatters.Exponent)) PyF.Formatters.Minus) (PyF.Internal.QQ.newPadding PyF.Internal.PythonSyntax.PaddingDefault)) ((PyF.Internal.QQ.toGrp Nothing) 3)) (PyF.Internal.QQ.changePrec PyF.Internal.PythonSyntax.PrecisionDefault)) hello))’
      In the expression: (PyF.magicFormat (Data.Text.Internal.Builder.fromString ((((((PyF.Internal.QQ.formatAnyFractional (PyF.Formatters.Upper PyF.Formatters.Exponent)) PyF.Formatters.Minus) (PyF.Internal.QQ.newPadding PyF.Internal.PythonSyntax.PaddingDefault)) ((PyF.Internal.QQ.toGrp Nothing) 3)) (PyF.Internal.QQ.changePrec PyF.Internal.PythonSyntax.PrecisionDefault)) hello)))
  |
7 | main = [f|{hello:E}|]
  |           ^^^^^^^^^^^
